Project

General

Profile

Actions

Bug #21547

closed

SEGV after 2083fa commit

Bug #21547: SEGV after 2083fa commit

Added by watson1978 (Shizuo Fujita) about 1 year ago. Updated about 1 year ago.

Status:
Closed
Target version:
ruby -v:
ruby 3.5.0dev (2025-08-13T17:54:56Z master 2083fa89fc) +PRISM [x86_64-linux]
[ruby-core:122987]

Description

I am maintaining Fluentd.
When I run Fluentd's unit tests after 2083fa commit,
Ruby causes SEGV.

$ git clone --depth 1 https://github.com/fluent/fluentd.git
$ cd fluentd
$ bundle install
$ ruby -v
ruby 3.5.0dev (2025-08-13T17:54:56Z master 2083fa89fc) +PRISM [x86_64-linux]

$ bundle exec rake test TESTOPTS=-v TEST=test/plugin/test_in_exec.rb
Source locally installed gems is ignoring #<Bundler::StubSpecification name=json version=2.13.2 platform=ruby> because it is missing extensions
/home/watson/.rbenv/versions/3.5-debug/bin/ruby -w -I"lib:test" -Eascii-8bit:ascii-8bit /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/rake-13.3.0/lib/rake/rake_test_loader.rb "test/plugin/test_in_exec.rb" -v
Source locally installed gems is ignoring #<Bundler::StubSpecification name=json version=2.13.2 platform=ruby> because it is missing extensions
/home/watson/tmp/fluentd/test/plugin/test_in_exec.rb:240: warning: assigned but unused variable - tag
/home/watson/tmp/fluentd/test/plugin/test_in_exec.rb:240: warning: assigned but unused variable - time
/home/watson/tmp/fluentd/test/plugin/test_in_exec.rb:246: warning: assigned but unused variable - d
/home/watson/tmp/fluentd/lib/fluent/plugin_helper.rb:46: warning: method redefined; discarding old inherited
/home/watson/tmp/fluentd/lib/fluent/plugin_helper.rb:46: warning: previous definition of inherited was here
Loaded suite /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/rake-13.3.0/lib/rake/rake_test_loader
Started
ExecInputTest: 
  test: emit error message with read_with_stderr:                                                                                                               .: (0.229405)
  test: emit with formats[default]:                                                                                                                             .: (0.908338)
  test: emit with formats[json]:                                                                                                                                .: (0.809623)
  test: emit with formats[msgpack]:                                                                                                                             /home/watson/tmp/fluentd/lib/fluent/plugin_helper/event_loop.rb:105: [BUG] Segmentation fault at 0x0000000000000024
ruby 3.5.0dev (2025-08-13T17:54:56Z master 2083fa89fc) +PRISM [x86_64-linux]

-- Control frame information -----------------------------------------------
c:0054 p:---- s:0316 e:000315 CFUNC  :detach
c:0053 p:---- s:0313 e:000312 CFUNC  :detach
c:0052 p:0012 s:0309 e:000308 BLOCK  /home/watson/tmp/fluentd/lib/fluent/plugin_helper/event_loop.rb:105 [FINISH]
c:0051 p:---- s:0304 e:000303 CFUNC  :reverse_each
c:0050 p:0006 s:0300 e:000299 BLOCK  /home/watson/tmp/fluentd/lib/fluent/plugin_helper/event_loop.rb:102 [FINISH]
c:0049 p:---- s:0297 e:000296 CFUNC  :synchronize
c:0048 p:0006 s:0293 e:000292 METHOD /home/watson/tmp/fluentd/lib/fluent/plugin_helper/event_loop.rb:101
c:0047 p:0014 s:0289 e:000288 METHOD /home/watson/tmp/fluentd/lib/fluent/plugin_helper/child_process.rb:149
c:0046 p:0011 s:0283 e:000282 METHOD /home/watson/tmp/fluentd/lib/fluent/plugin_helper/parser.rb:126
c:0045 p:0016 s:0279 e:000278 BLOCK  /home/watson/tmp/fluentd/lib/fluent/test/driver/base.rb:161
c:0044 p:0005 s:0276 e:000275 BLOCK  /home/watson/tmp/fluentd/lib/fluent/test/driver/base.rb:150
c:0043 p:0064 s:0270 E:001588 METHOD /home/watson/tmp/fluentd/lib/fluent/test/driver/base.rb:161
c:0042 p:0123 s:0263 E:0022e0 METHOD /home/watson/tmp/fluentd/lib/fluent/test/driver/base.rb:100
c:0041 p:0045 s:0250 E:0003a8 METHOD /home/watson/tmp/fluentd/lib/fluent/test/driver/base_owner.rb:130
c:0040 p:0028 s:0239 e:000238 BLOCK  /home/watson/tmp/fluentd/test/plugin/test_in_exec.rb:272
c:0039 p:0131 s:0229 e:000228 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testcase.rb:911
c:0038 p:0003 s:0221 e:000220 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testcase.rb:601
c:0037 p:0024 s:0218 e:000217 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/fixture.rb:276
c:0036 p:0024 s:0214 e:000213 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/fixture.rb:276
c:0035 p:0024 s:0210 e:000209 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/fixture.rb:276
c:0034 p:0052 s:0206 e:000205 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/fixture.rb:257
c:0033 p:0009 s:0197 e:000196 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/fixture.rb:292
c:0032 p:0004 s:0192 E:000318 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testcase.rb:599 [FINISH]
c:0031 p:---- s:0188 e:000187 CFUNC  :catch
c:0030 p:0046 s:0184 E:001d78 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testcase.rb:598
c:0029 p:0045 s:0175 E:001730 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:96
c:0028 p:0013 s:0163 e:000162 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:62 [FINISH]
c:0027 p:---- s:0159 e:000158 CFUNC  :each
c:0026 p:0009 s:0155 e:000154 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:61
c:0025 p:0037 s:0147 e:000146 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:39
c:0024 p:0030 s:0139 E:000ce8 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testsuite.rb:56
c:0023 p:0045 s:0130 E:000090 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:96
c:0022 p:0013 s:0118 e:000117 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:62 [FINISH]
c:0021 p:---- s:0114 e:000113 CFUNC  :each
c:0020 p:0009 s:0110 e:000109 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:61
c:0019 p:0037 s:0102 e:000101 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:39
c:0018 p:0030 s:0094 E:001318 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/testsuite.rb:56
c:0017 p:0028 s:0085 E:0015a0 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:72
c:0016 p:0041 s:0079 e:000078 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:49 [FINISH]
c:0015 p:---- s:0075 e:000074 CFUNC  :catch
c:0014 p:0004 s:0071 e:000070 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:44
c:0013 p:0008 s:0067 e:000066 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/test-suite-runner.rb:19
c:0012 p:0006 s:0063 e:000062 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:43
c:0011 p:0038 s:0060 E:002668 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:107
c:0010 p:0033 s:0051 E:000d78 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnermediator.rb:42
c:0009 p:0006 s:0044 e:000043 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunner.rb:40
c:0008 p:0019 s:0040 e:000039 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunner.rb:25
c:0007 p:0015 s:0036 e:000035 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/ui/testrunnerutilities.rb:24
c:0006 p:0010 s:0030 e:000029 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/autorunner.rb:499
c:0005 p:0019 s:0027 e:000026 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/autorunner.rb:564
c:0004 p:0182 s:0022 e:000021 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/autorunner.rb:498
c:0003 p:0057 s:0016 e:000015 METHOD /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit/autorunner.rb:68
c:0002 p:0017 s:0007 e:000005 BLOCK  /home/watson/.rbenv/versions/3.5-debug/lib/ruby/gems/3.5.0+3/gems/test-unit-3.7.0/lib/test/unit.rb:518 [FINISH]
c:0001 p:0000 s:0003 E:000410 DUMMY  [FINISH]

...(snip)...

Files

crash.log (73 KB) crash.log Earlopain (Earlopain _), 08/21/2025 09:58 AM

Updated by byroot (Jean Boussier) about 1 year ago Actions #1 [ruby-core:122990]

  • Assignee set to byroot (Jean Boussier)

Updated by byroot (Jean Boussier) about 1 year ago Actions #2 [ruby-core:123005]

  • Backport changed from 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN to 3.2: DONTNEED, 3.3: DONTNEED, 3.4: DONTNEED

@watson1978 (Shizuo Fujita) Unfortunately this doesn't seem to reproduce on my machine.

Does your crash report include the C level backtrace? If so could you share it?

Also could you make sure all native extensions have been recompiled?

Updated by Earlopain (Earlopain _) about 1 year ago Actions #3 [ruby-core:123017]

I reproduces pretty much all the time for me (with a clean install). A good starting point seems to be the cool.io gem (https://github.com/socketry/cool.io/), running its specs with bundle exec rspec spec/tcp_server_spec.rb:111 also crashses.

-- C level backtrace information -------------------------------------------
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_print_backtrace+0x5) [0x76981d779b06] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_dump.c:843
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_bugreport) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_dump.c:1175
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_bug_for_fatal_signal+0x105) [0x76981d538695] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/error.c:1130
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(sigsegv+0x44) [0x76981d6ad6c4] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/signal.c:948
/usr/lib/libc.so.6(0x76981d03e540) [0x76981d03e540]
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(RB_FL_TEST_RAW+0x0) [0x76981d57ea7c] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/hash.c:2368
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(RHASH_AR_TABLE_P) internal/hash.h:128
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_hash_stlike_delete) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/hash.c:2353
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_hash_delete_entry) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/hash.c:2371
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_hash_delete+0x9) [0x76981d57f489] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/hash.c:2387
/home/user/code/cool.io/lib/cool.io_ext.so(Coolio_Watcher_detach+0x62) [0x76981d228582] ../../../../ext/cool.io/watcher.c:146
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call0_cfunc_with_frame+0x11c) [0x76981d76646c] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:164
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call0_cfunc) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:178
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call0_body) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:229
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_call_super_kw+0x24c) [0x76981d771f2c] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:101
/home/user/code/cool.io/lib/cool.io_ext.so(Coolio_IOWatcher_detach+0x84) [0x76981d2213a4] ../../../../ext/cool.io/iowatcher.c:127
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xb1) [0x76981d75b116] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:899
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec+0x236) [0x76981d761656] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2621
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(yield_under+0x24b) [0x76981d76546b] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:1702
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xc5) [0x76981d74d965] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core+0x1a1d) [0x76981d75ca0d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:851
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec+0x236) [0x76981d761656] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2621
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_yield_with_cref+0x4c) [0x76981d765e6c] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:1702
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_yield) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:1710
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_yield_0) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:1362
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_yield) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:1378
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_ary_collect+0x4d) [0x76981d46bf1d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/array.c:3654
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xc5) [0x76981d74d965] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core+0x1a1d) [0x76981d75ca0d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:851
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec+0x236) [0x76981d761656] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2621
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_yield_with_cref+0x4c) [0x76981d765e6c] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:1702
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_yield) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:1710
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_yield_0) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:1362
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_yield) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_eval.c:1378
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_ary_collect+0x4d) [0x76981d46bf1d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/array.c:3654
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xc5) [0x76981d74d965] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core+0x1a1d) [0x76981d75ca0d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:851
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_loop+0x72) [0x76981d7617d2] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2648
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2627
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(raise_load_if_failed+0x0) [0x76981d5b4cb6] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:951
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_load_internal) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:953
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_f_load+0x66) [0x76981d5b4d66] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:993
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xb1) [0x76981d75b116] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:899
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec+0x236) [0x76981d761656] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2621
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(raise_load_if_failed+0x0) [0x76981d5b4cb6] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:951
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_load_internal) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:953
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_f_load+0x66) [0x76981d5b4d66] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:993
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xb1) [0x76981d75b116] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:899
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_loop+0x72) [0x76981d7617d2] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2648
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2627
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(raise_load_if_failed+0x0) [0x76981d5b4cb6] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:951
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_load_internal) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:953
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_f_load+0x66) [0x76981d5b4d66] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/load.c:993
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_call_cfunc_with_frame_+0xfd) [0x76981d74416d] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:3848
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_sendish+0xb1) [0x76981d75b116] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm_insnhelper.c:6055
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(vm_exec_core) /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/insns.def:899
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_vm_exec+0x236) [0x76981d761656] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/vm.c:2621
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(rb_ec_exec_node+0x99) [0x76981d53fee9] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/eval.c:282
/home/user/.rbenv/versions/ruby-dev/lib/libruby.so.3.5(ruby_run_node+0x83) [0x76981d546713] /tmp/ruby-build.20250821112947.19857.Jz65es/ruby-master/eval.c:320
/home/user/.rbenv/versions/ruby-dev/bin/ruby(rb_main+0x21) [0x57216a96d100] ./main.c:42
/home/user/.rbenv/versions/ruby-dev/bin/ruby(main) ./main.c:62
/usr/lib/libc.so.6(0x76981d027675) [0x76981d027675]
/usr/lib/libc.so.6(__libc_start_main+0x89) [0x76981d027729]
[0x57216a96d145]

Updated by byroot (Jean Boussier) about 1 year ago Actions #4 [ruby-core:123018]

Thanks. Perhaps it's a linux only issue, I'll try to investigate further.

Updated by watson1978 (Shizuo Fujita) about 1 year ago Actions #5 [ruby-core:123020]

We are running tests using Ruby HEAD on Linux, macOS, and Windows platforms.
https://github.com/fluent/fluentd/actions/runs/17022072274

The SEGV are caused on each platforms...

Updated by byroot (Jean Boussier) about 1 year ago Actions #6 [ruby-core:123023]

I was able to reproduce with the cool.io test suite.

Updated by byroot (Jean Boussier) about 1 year ago Actions #8

  • Status changed from Open to Closed

Applied in changeset git|b6bf44ae0f0196c58a07e13ac1bd7adafd13f8b2.


variable.c: handle cleared fields_obj in genfields cache

[Bug #21547]

Followup: https://github.com/ruby/ruby/pull/14201

When adding an instance variable and the IMEMO/fields need to be
larger, we allocate a new one and clear the old one.

Since the old one may still be in other ec's cache, on a hit we must
check the IMEMO/fields isn't a stale one.

Updated by Earlopain (Earlopain _) about 1 year ago Actions #9 [ruby-core:123025]

Thanks as always. I can confirm that this fixes this issue.

Updated by watson1978 (Shizuo Fujita) about 1 year ago Actions #10 [ruby-core:123027]

Thanks. It works well!

Actions

Also available in: PDF Atom